Distributing the space above the footer widgets a bit, so part is above the widgets, and part is above the wrap. That way, the social icons and WordPress credit aren't right up against the top border. Fixes #304.

--- a/style.css
+++ b/style.css
@@ -1988,11 +1988,15 @@ body:not(.twentyseventeen-front-page) .entry-header {
 	padding: 0 0 1.5em;
 }
 
+.site-footer .wrap {
+	padding-top: 2em;
+}
+
 /* Footer widgets */
 
 .site-footer .widget-area {
 	padding-bottom: 2em;
-	padding-top: 4em;
+	padding-top: 2em;
 }
 
 /* Social nav */
